# agent_sim

./: Cargo.toml  README.md  config.json  index.html
interesting_configs/: blooms.json  hives.json
src/: agent.rs  config.rs  context.rs  lib.rs  main.rs  state.rs
src/pass/: draw_agents.rs  draw_agents.wgsl  draw_world.rs  draw_world.wgsl  mod.rs  params.rs  simulate_agents.rs  simulate_agents.wgsl  simulate_world.rs  simulate_world.wgsl
